k8s/platform/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: ns-devops-arena
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      serviceAccountName: backend-sa
      containers:
        - name: backend
          image: jodyys/devops-arena:backend-INITIAL_DEPLOYMENT
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4000
          volumeMounts:
            - name: challenges-volume
              mountPath: /k8s/challenges
          readinessProbe:
            httpGet:
              path: /health
              port: 4000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 4000
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
      volumes:
        - name: challenges-volume
          configMap:
            name: backend-challenges-cm
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: ns-devops-arena
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
