k8s/platform/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: ns-devops-arena
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: jodyys/devops-arena:frontend-INITIAL_DEPLOYMENT
          securityContext:
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: tmp-volume
              mountPath: /tmp
            - name: next-cache-volume
              mountPath: /app/.next/cache
          ports:
            - containerPort: 3001
          readinessProbe:
            httpGet:
              path: /
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3001
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
      volumes:
        - name: tmp-volume
          emptyDir: {}
        - name: next-cache-volume
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: ns-devops-arena
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
